test/org/midica/testfiles/failing/eff-func-halftone-for-vol.midica
INCLUDE inc/instruments.midica


0: vol.set(12.0)
